tests/baselines/reference/getterControlFlowStrictNull.errors.txt
tests/cases/compiler/getterControlFlowStrictNull.ts(2,9): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
tests/cases/compiler/getterControlFlowStrictNull.ts(11,14): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
tests/cases/compiler/getterControlFlowStrictNull.ts(20,9): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.


==== tests/cases/compiler/getterControlFlowStrictNull.ts (3 errors) ====
    class A {
       a(): string | null {
            ~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (Math.random() > 0.5) {
                return '';
            }
    
            // it does error here as expected
        }
    }
    class B {
        get a(): string | null {
                 ~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (Math.random() > 0.5) {
                return '';
            }
    
            // it should error here because it returns undefined
        }
    }
    class C {
        get a() {
            ~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
            if (Math.random() > 0.5) {
                return 0;
            }
    
            // it should error here because it returns undefined
        }
    
        set a(value: number) {
        }
    }